# marty-sim

./: CMakeLists.txt  README.md  package.xml
data/meshes/: april.mtl  gate.mtl
data/scenarios/: auv.scn  auv_sim.scn  main_arena.scn  marty_auv.scn  qualification_arena.scn  random.scn  simple.scn  underwater_test.scn
launch/: jyols.launch  test.launch
scripts/: translation.py
