<?xml version="1.0"?>
<package format="2">
    <name>marty_sim</name>
    <version>0.0.1</version>
    <description>Simulator for AUV marty aimed at the SAUVC</description>

    <maintainer email="cs21b1041@iiitdm.ac.in">Rose</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>rose_tvmc</build_depend>
    <build_depend>rose_tvmc_msg</build_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>geometry_msgs</build_export_depend>
    <build_export_depend>rose_tvmc</build_export_depend>
    <build_export_depend>rose_tvmc_msg</build_export_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>rose_tvmc</exec_depend>
    <exec_depend>rose_tvmc_msg</exec_depend>


    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
